# noiceguard

./: package-lock.json  package.json
.cursor/plans/: noiseguard_starter_project_bccb1a2b.plan.md
.github/workflows/: release.yml
electron/: index.html  main.js  preload.js  renderer.js  styles.css
native/: CMakeLists.txt  binding.gyp
native/src/: addon.cc  audio.cpp  audio.h  rnnoise_wrapper.cpp  rnnoise_wrapper.h
scripts/: build-native.ps1
